[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "market-signals"
version = "0.1.0"
description = "Market valuation and macro signal analysis"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "matplotlib",
    "openpyxl",
    "streamlit",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
market-signals = "market_signals.cli:main"
market-signals-dashboard = "market_signals.dashboard_runner:main"
